Remove link from Out of The Box Web Design since it no longer works

--- a/_sass/_customization.scss
+++ b/_sass/_customization.scss
@@ -65,6 +65,10 @@ footer {
     font-size: $font-size-sm;
 }
 
+.ootb { 
+    color: $secondary-color;
+}
+
 .footer-copyright {
     padding: 1em;
 }
